--- a/soccer-juggle/index.html
+++ b/soccer-juggle/index.html
@@ -120,12 +120,11 @@
         left: 0;
         right: 0;
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
-        gap: 20px;
         z-index: 100;
         top: 10px;
-        padding: 0 10px;
+        padding: 0 20px;
     }
 
     #score-container {
