--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             }
         }
         .github-link {
-            position: fixed;
+            position: absolute;
             top: 2rem;
             right: 2rem;
             opacity: 0.7;
