--- a/water-ring-toss/index.html
+++ b/water-ring-toss/index.html
@@ -100,7 +100,7 @@
                 text-transform: uppercase;
                 letter-spacing: 1px;
                 font-weight: bold;
-                margin-left: 70px;
+                margin-bottom: 70px;
             }
             .b {
                 width: 60px;
