updated soccer juggle

--- a/soccer-juggle/index.html
+++ b/soccer-juggle/index.html
@@ -35,6 +35,7 @@
 	}
 
 	body {
+		background: #2E7D32; /* Fallback */
 		background: var(--bg-color);
 		color: var(--text-color);
 		font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
