--- a/soccer-juggle/index.html
+++ b/soccer-juggle/index.html
@@ -129,7 +129,7 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		height: calc(100vh - 80px);
+		height: calc(90vh - 60px);
 		width: 100%;
 	}
 
@@ -140,9 +140,9 @@
 		left: 0;
 		right: 0;
 		bottom: 0;
-		background: 
-		    radial-gradient(circle 60px at center, transparent 58px, var(--line-color) 58px, var(--line-color) 60px, transparent 60px),
-		    linear-gradient(to right, transparent calc(50% - 1px), var(--line-color) calc(50% - 1px), var(--line-color) calc(50% + 1px), transparent calc(50% + 1px));
+		background:
+			radial-gradient(circle at center, transparent 50px, white 51px, white 53px, transparent 54px), /* Larger circumference dot, thinner border */
+			linear-gradient(to right, transparent 49.5%, var(--line-color) 50%, transparent 50.5%);  /* Sharp center line */
 	}
 
 	#game-container::after {
@@ -261,7 +261,7 @@
 		padding: 8px 16px;
 		border-radius: 16px;
 		box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-		bottom: 90px;
+		bottom: 120px;
 		z-index: 1000;
 		text-align: center;
 		width: 85%;
