added snake game

--- a/index.html
+++ b/index.html
@@ -397,6 +397,22 @@
 </g>
 </svg>`
             },
+			snakeGame: {
+				title: 'Snake Game',
+				path: '/games/snake-game',
+				description: 'Classic snake game with a modern twist. Eat the food, grow longer, and try not to hit the walls or yourself!',
+				icon: `<svg xmlns="http://www.w3.org/2000/svg" viewBox="-2500 -2500 5000 5000">
+					<title>snake game</title>
+					<g stroke="#fff" stroke-width="200">
+						<path fill="#fff" d="M-2000 0 C-2000 -1000, -1200 -1000, -1200 0 C-1200 1000, -400 1000, -400 0 C-400 -1000, 400 -1000, 400 0 C400 1000, 1200 1000, 1200 0"/>
+						<circle fill="#FF5252" cx="2000" cy="0" r="500"/>
+					</g>
+					<g fill="#fff">
+						<circle cx="-1800" cy="0" r="200"/>
+						<circle cx="-1200" cy="-150" r="100"/>
+					</g>
+				</svg>`
+			},
             soccerJuggle: {
                 title: 'Soccer Juggle',
                 path: '/games/soccer-juggle',
