updated meta tags for social

--- a/index.html
+++ b/index.html
@@ -17,6 +17,27 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-touch-icon.png" />
 	<meta name="apple-mobile-web-app-title" content="AI Game Collection" />
 	<link rel="manifest" href="site.webmanifest" />
+	<meta name="description" content="This site and all games were built using AI with minimal code changes.">
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://jereme.dev/games/">
+	<meta property="og:title" content="AI Game Collection - jereme.dev/games">
+	<meta property="og:description" content="This site and all games were built using AI with minimal code changes.">
+	<meta property="og:image" content="https://jereme.dev/games/images/icons/web-app-manifest-512x512.png">
+
+	<!-- Twitter -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:url" content="https://jereme.dev/games/">
+	<meta name="twitter:title" content="AI Game Collection - jereme.dev/games">
+	<meta name="twitter:description" content="This site and all games were built using AI with minimal code changes.">
+	<meta name="twitter:image" content="https://jereme.dev/games/images/icons/web-app-manifest-512x512.png">
+
+	<!-- Additional Tags -->
+	<link rel="canonical" href="https://jereme.dev/games/">
+	<meta property="og:site_name" content="jereme.dev">
+	<meta property="og:locale" content="en_US">
+
     <style>
         * {
             margin: 0;
